syntax = "proto3";

option go_package = "/;pb";
import "google/api/annotations.proto";

message Juego {
    string id = 1;
	string tipo = 2;
	string nombre = 3;
}
 
service JuegoService {
	rpc GetJuegoById (GetJuegoRequest) returns (GetJuegoResponse){
		option (google.api.http) = {
            get	:"/v1/juego"
        };
	};
    rpc AddJuego (AddJuegoRequest) returns (AddJuegoResponse){
		option (google.api.http) = {
            post :"/v1/juego/create"
            body :"*"
        };
	}; 
}

message GetJuegoRequest {
    string id = 1;
}

message GetJuegoResponse {
    Juego juego = 1;
}

message AddJuegoRequest {
    Juego juego = 1;
}

message AddJuegoResponse {
    Juego juego = 1;
}